# aperture-rs

./: Cargo.toml  rust-toolchain.toml  rustfmt.toml
derive/: Cargo.toml
derive/src/: lenses.rs  lib.rs  prisms.rs
src/: affine_fold.rs  affine_traversal.rs  data.rs  fold.rs  getter.rs  identity.rs  impls.rs  lazy.rs  lens.rs  lib.rs  method.rs  optics.rs  prism.rs  review.rs  setter.rs  std.rs  then.rs  traversal.rs
src/data/: lenses.rs
src/fold/: nested.rs
src/impls/: at.rs  every.rs  filtered.rs  first.rs  fold_of.rs  identity.rs  list_of.rs  person_af.rs  person_at.rs  person_folds.rs  person_lenses.rs  person_setters.rs  some.rs  some_review.rs  unwrap.rs
src/method/: lazy.rs
src/optics/: affine_fold.rs  affine_traversal.rs  fold.rs  get.rs  getter.rs  impls.rs  lens.rs  optics.rs  prism.rs  review.rs  set.rs  setter.rs  then.rs  then_impl.rs  traversal.rs  traverse.rs
src/optics/fold/: nested.rs
src/optics/impls/: at.rs  every.rs  filtered.rs  first.rs  fold_of.rs  list_of.rs  unwrap.rs
src/optics/lens/: ext.rs  lens_and_lens.rs  tuple.rs
src/optics/then_impl/: lens_and_lens.rs  lens_and_prism.rs
src/optics/traversal/: nested.rs
src/std/: every.rs  filtered.rs  first.rs  fold_of.rs  option.rs  result.rs
src/traversal/: nested.rs
