[package]
name = "lenses"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["derive", "."]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive", "gat"]
derive = ["dep:lenses-derive"]
gat = []

[dependencies]
lenses-derive = { path = "derive", optional = true }